--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -172,6 +172,7 @@ body {
             background-color: transparent;
             border: 0;
             margin-right: auto;
+            cursor: pointer;
 
             svg {
                 width: 32px;
